# zhiyan-evolviq

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  README.zh.md  bench_result.json  docker-compose.yml  pyproject.toml  verify_loop.py  verify_wushihua.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
data/seed/: aoi_results.json  bom_npi_007.json  components.json  dfm_check.json  eco_cases.json  inventory.json  ipc_standards.json  metrics_demo.json  oee_lines.json  pm_equipment.json  (+7 more)
docs/: ALIGNMENT_REPORT.md  DEMO_DASHBOARD.html  GUIDE.md  GUIDE.zh.md  RELEASE_NOTE_V1.html  RELEASE_NOTE_V1.md  RETROSPECTIVE_2026-07-16.md  SMIC_ALIGNMENT.md  SMIC_DEMO.md  SMIC_FUNCTIONAL_ALIGNMENT.md  SMIC_FUNCTION_MAP.md  TEST_REPORT.md  release_draft.json
infra/: Dockerfile.ipc-cfx-publisher  Dockerfile.modbus-sim  Dockerfile.mqtt-publisher  Dockerfile.opcua-server  Dockerfile.runtime  Dockerfile.studio  mosquitto.conf  nginx.conf
scripts/: bench_align.py  check_imports_vs_pyproject.py  modbus_sim.py  seed_data.py  seed_data_smic.py  startup.sh  verify_ai_insight.py  verify_compose_context.py  verify_demo_data.py  verify_federation.py  verify_gateways.py  verify_kg.py  verify_live.py  verify_p1_gateways_local.py  verify_persistence.py  verify_strategy.py  verify_t3.py
studio/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
tests/: test_pm_agent.py  test_quality_trace_agent.py  test_yield_agent.py
(+137 files in other folders)
