[project]
name = "zhiyan"
version = "0.1.0"
description = "智衍（EvolvIQ）AI原生工业智能体开发与部署平台"
authors = [{name = "工业5点0产业生态联盟"}]
license = {text = "Apache-2.0"}
requires-python = ">=3.13"
readme = "README.md"

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy>=2.0",
    "asyncpg>=0.30",
    "aiosqlite>=0.20",
    "langgraph>=0.4",
    "langchain-core>=0.3",
    "mcp>=1.4",
    "httpx>=0.28",
    "pymodbus>=3.8",
    "paho-mqtt>=2.1",
    "neo4j>=5.27",
    "openai>=1.72",
    "python-multipart>=0.0.18",
    "apscheduler>=3.10",
    "aio-pika>=9.0",
    "asyncua>=1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
    "ruff>=0.9",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
